# remote-desktop

./: CMakeLists.txt  conanfile.txt
app/: CMakeLists.txt  app.cpp
libs/window/: CMakeLists.txt
libs/window/include/remote_desktop/window/: window.hpp
